# WeatherFastReportMCP

./: LICENSE  README.md  china_weather_forecast2025022.py  main.py  pyproject.toml  wechat.py  青岛天气快报.docx
MCPserver/: china_weather_forecast2025022.py
files/geo-json/: 110105.txt  110114.txt  120101.txt  120102.txt  120113.txt  120114.txt  120119.txt  130107.txt  130111.txt  130128.txt  130129.txt  130183.txt  130208.txt  130306.txt  130321.txt  130423.txt  130424.txt  130425.txt  130426.txt  130430.txt  130522.txt  130523.txt  130527.txt  130532.txt  130608.txt  130623.txt  130626.txt  130630.txt  130632.txt  130633.txt  130634.txt  130635.txt  130636.txt  130702.txt  130722.txt  130732.txt  130821.txt  130822.txt  130825.txt  130902.txt  (+1430 more)
geo-json/: 110102.txt  110112.txt  110113.txt  110118.txt  110119.txt  120115.txt  130102.txt  130104.txt  130105.txt  130108.txt  130132.txt  130133.txt  130184.txt  130223.txt  130224.txt  130227.txt  130302.txt  130303.txt  130304.txt  130402.txt  130404.txt  130427.txt  130431.txt  130434.txt  130481.txt  130502.txt  130503.txt  130521.txt  130530.txt  130533.txt  130534.txt  130535.txt  130581.txt  130628.txt  130637.txt  130638.txt  130681.txt  130683.txt  130703.txt  130708.txt  (+1345 more)
