[project]
name = "chinaweathermcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adjusttext>=1.3.0",
    "geojson>=3.2.0",
    "geopandas>=1.1.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.2",
    "pandas>=2.2.3",
    "python-docx>=1.1.2",
    "requests>=2.32.3",
    "wxauto>=3.9.11.17.5",
]
